name:           relative-monad
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/andrewthad/relative-monad#readme>
homepage:       https://github.com/andrewthad/relative-monad#readme
bug-reports:    https://github.com/andrewthad/relative-monad/issues
author:         Andrew Martin
maintainer:     andrew.thaddeus@gmail.com
copyright:      2017 Andrew Martin
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/andrewthad/relative-monad

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  exposed-modules:
    Control.Monad.Relative
  default-language: Haskell2010
